Resize blocks and fix text wrapping

--- a/src/Seesaw.css
+++ b/src/Seesaw.css
@@ -69,9 +69,8 @@
 }
 
 .optionBlock {
-    width: 70px;
-    height: 36px;
-    line-height: 36px;
+    width: 90px;
+    height: 46px;
     text-align: center;
     display: flex;
     align-items: center;
@@ -79,24 +78,29 @@
 
 .optionBlock img {
     max-width: 100%;
-
 }
 
 .seesawOptionsA {
-    width: 150px;
-    left: -18px;
-    width: 150px;
+    width: 180px;
+    left: -40px;
     position: absolute;
-    bottom: 86px;
+    bottom: 82px;
+}
+
+.seesawOptionsB {
+    width: 180px;
+    left: 155px;
+    position: absolute;
+    bottom: 82px;
 }
 
 .options1Set {
-    width:140px;
-    height: 35px;
+    width:180px;
+    height: 46px;
 }
 .options2Set {
-    width:140px;
-    height: 35px;
+    width:180px;
+    height: 46px;
 }
 
 .blockA {
@@ -106,22 +110,23 @@
 
 .blockB {
     position: absolute;
-    left: 67px;
+    left: 86px;
 }
 
 .blockC {
     position: absolute;
-    left: 35px;
+    left: 46px;
 }
 
 .blockText {
     position: absolute;
-    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     text-align: center;
     font-size: 10px;
     color: white;
-    white-space: nowrap;
-    overflow: hidden;
-
-    /* display: inline-block; */
+    font-weight: bolder;
+    padding-left: 5px;
+    padding-right: 5px;
+    box-sizing: border-box;;
 }
